--- a/index.html
+++ b/index.html
@@ -162,8 +162,20 @@
     </div>
     <!-- Carousel End -->
 
+    <div class="container pt-5">
+        <div class="d-flex flex-column text-center mb-5">
+            <h5 class="text-primary mb-3">What We Do <br> <span> <h6> EVERYTHING</h6></span>
+            </h5>
+            <h1 class="m-0" style="color: aliceblue;">What you need to do <br> <span> <h6 > Just Vote</h6></span></h1>
+            <a href="#votenow">
+            <button class="glow-on-hover" type="button">Vote Now</button>  </a>
+
+
+        </div>
+
 
     <!-- Features Start -->
+    <section id="votenow"></section>
     <div class="container-fluid py-5 py-lg-0 feature">
         <div class="row py-5 py-lg-0">
             <div class="col-lg-4 p-0">
@@ -171,6 +183,9 @@
                     <img src="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/64/000000/external-actor-movie-theater-flaticons-lineal-color-flat-icons.png"/>
                     <div class="">
                         <h5 class="mb-3">Best Actor</h5>
+                        <a href="https://forms.gle/MmjShBkXtTMGke9T9">
+                        <button class="button button1">Vote For Best Actor</button>
+                    </a>
                         <!-- <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci velit id libero -->
                         </p>
                     </div>
@@ -180,7 +195,10 @@
                 <div class="feature-item d-flex align-items-center border-right px-5 mb-4 mb-lg-0">
                     <img src="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/64/000000/external-actress-movie-theater-flaticons-lineal-color-flat-icons.png"/>
                     <div class="">
+                       
                         <h5 class="mb-3">Best Actress</h5>
+                        <a href="https://forms.gle/KRsQMucKc5TcEQxs6">
+                        <button class="button button1">Vote For Best Actress</button></a>
                         <!-- <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci velit id libero -->
                         </p>
                     </div>
@@ -191,6 +209,8 @@
                     <img src="https://img.icons8.com/external-icongeek26-linear-colour-icongeek26/64/000000/external-show-amusement-park-icongeek26-linear-colour-icongeek26.png"/>
                     <div class="">
                         <h5 class="mb-3">Best Show</h5>
+                        <a href="https://forms.gle/qrTtDAdbqQ6BUbNf9">
+                        <button class="button button1">Vote For Best Show</button></a>
                         <!-- <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci velit id libero -->
                         </p>
                     </div>
@@ -202,6 +222,8 @@
                     <img src="https://img.icons8.com/external-justicon-flat-justicon/64/000000/external-couple-romantic-love-justicon-flat-justicon.png"/>
                     <div class="">
                         <h5 class="mb-3">Best On Screen Couple.</h5>
+                        <a href="https://forms.gle/VwGt1uZwK5g9oALR6">
+                        <button class="button button1">Vote For On Screen Couple</button></a>
                         <!-- <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci velit id libero -->
                         </p>
                     </div>
@@ -251,16 +273,7 @@
 
 
     <!-- Services Start -->
-    <div class="container pt-5">
-        <div class="d-flex flex-column text-center mb-5">
-            <h5 class="text-primary mb-3">What We Do <br> <span> <h6> EVERYTHING</h6></span>
-            </h5>
-            <h1 class="m-0">What you need to do <br> <span> <h6> Just Vote</h6></span></h1>
-            <a href="https://forms.gle/SLosN4dSUVLiGhpk8">
-            <button class="glow-on-hover" type="button">Vote Now</button>  </a>
-
-
-        </div>
+    
         <!-- Services Start 
         <div class="row pb-3">
             <div class="col-md-6 col-lg-4 mb-4">
