--- a/index.html
+++ b/index.html
@@ -221,9 +221,9 @@
                 <div class="feature-item d-flex align-items-center px-5">
                     <img src="https://img.icons8.com/external-justicon-flat-justicon/64/000000/external-couple-romantic-love-justicon-flat-justicon.png"/>
                     <div class="">
-                        <h5 class="mb-3">Best On Screen Couple.</h5>
+                        <h5 class="mb-3">Best On Screen Couple</h5>
                         <a href="https://forms.gle/VwGt1uZwK5g9oALR6">
-                        <button class="button button1">Vote For On Screen Couple</button></a>
+                        <button class="button button1">Vote For Best On Screen Couple</button></a>
                         <!-- <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci velit id libero -->
                         </p>
                     </div>
