--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
             <h5 class="text-primary mb-3">What We Do <br> <span> <h6> EVERYTHING</h6></span>
             </h5>
             <h1 class="m-0" style="color: aliceblue;">What you need to do <br> <span> <h6 > Just Vote</h6></span></h1>
-            <a href="#votenow">
-            <button class="glow-on-hover" type="button">Vote Now</button>  </a>
+            <a href="#">
+            <button class="glow-on-hover" type="button">Voting Closed</button>  </a>
 
 
         </div>
@@ -183,9 +183,9 @@
                     <img src="https://img.icons8.com/external-flaticons-lineal-color-flat-icons/64/000000/external-actor-movie-theater-flaticons-lineal-color-flat-icons.png"/>
                     <div class="">
                         <h5 class="mb-3">Best Actor</h5>
-                        <a href="https://forms.gle/MmjShBkXtTMGke9T9">
+                        <!-- <a href="https://forms.gle/MmjShBkXtTMGke9T9">
                         <button class="button button1">Vote For Best Actor</button>
-                    </a>
+                    </a> -->
                         <!-- <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci velit id libero -->
                         </p>
                     </div>
@@ -197,8 +197,8 @@
                     <div class="">
                        
                         <h5 class="mb-3">Best Actress</h5>
-                        <a href="https://forms.gle/KRsQMucKc5TcEQxs6">
-                        <button class="button button1">Vote For Best Actress</button></a>
+                        <!-- <a href="https://forms.gle/KRsQMucKc5TcEQxs6">
+                        <button class="button button1">Vote For Best Actress</button></a> -->
                         <!-- <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci velit id libero -->
                         </p>
                     </div>
@@ -209,8 +209,8 @@
                     <img src="https://img.icons8.com/external-icongeek26-linear-colour-icongeek26/64/000000/external-show-amusement-park-icongeek26-linear-colour-icongeek26.png"/>
                     <div class="">
                         <h5 class="mb-3">Best Show</h5>
-                        <a href="https://forms.gle/qrTtDAdbqQ6BUbNf9">
-                        <button class="button button1">Vote For Best Show</button></a>
+                        <!-- <a href="https://forms.gle/qrTtDAdbqQ6BUbNf9">
+                        <button class="button button1">Vote For Best Show</button></a> -->
                         <!-- <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci velit id libero -->
                         </p>
                     </div>
@@ -222,8 +222,8 @@
                     <img src="https://img.icons8.com/external-justicon-flat-justicon/64/000000/external-couple-romantic-love-justicon-flat-justicon.png"/>
                     <div class="">
                         <h5 class="mb-3">Best On Screen Couple</h5>
-                        <a href="https://forms.gle/VwGt1uZwK5g9oALR6">
-                        <button class="button button1">Vote For Best On Screen Couple</button></a>
+                        <!-- <a href="https://forms.gle/VwGt1uZwK5g9oALR6">
+                        <button class="button button1">Vote For Best On Screen Couple</button></a> -->
                         <!-- <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci velit id libero -->
                         </p>
                     </div>
